# cs2_gsi

./: Cargo.toml  README.md  config.toml  gamestate_integration_example.cfg  inferred_schema.json
crates/schema_interface/: Cargo.toml
crates/schema_interface/src/: generator.rs  lib.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: generated_structs.rs  handler.rs  logger.rs  main.rs
src/: logger.rs
