[package]
name = "cs2_gsi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }
